<resources>
    <string name="app_name">hbhims</string>
    <string name="copy_to_clipboard">%s 已复制到剪切板</string>
    <string name="navigation_drawer_open">打开侧边栏</string>
    <string name="navigation_drawer_close">关闭侧边栏</string>

    <string name="welcome_back">欢迎回来</string>
    <string name="app_description">人体基本健康信息管理系统</string>
    <string name="register">注册</string>
    <string name="have_account_login">已有帐号？登录</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="coe">验证码</string>
    <string name="login">登录</string>
    <string name="forget_password">忘记密码</string>
    <string name="sex">性别</string>
    <string name="birthday">生日</string>
    <string name="key_user_json">user_json</string>
    <string name="cancel">取消</string>
    <string name="health">健康</string>
    <string name="myself">我的</string>
    <string name="medical_suggestion">医疗意见和建议</string>
    <string name="operate_again_to_exit">再次操作后退出</string>
    <string name="loading">加载中，请稍后…</string>
    <string name="no_data_chart">暂无数据可以统计喔~~~</string>
    <string name="step">步</string>
    <string name="cal">cal</string>
    <string name="km">km</string>
    <string name="today_step_value">今日步数</string>
    <string name="hour">时</string>
    <string name="minute">分</string>
    <string name="loginning">正在登录…</string>
    <string name="remember_account">记住账号</string>
    <string name="over_weight">肥胖</string>
    <string name="thin">偏瘦</string>
    <string name="normal">正常</string>
    <string name="fatter">偏胖</string>
    <string name="zero">0</string>
    <string name="step_value">步数</string>
    <string name="start_time">入睡时间</string>
    <string name="end_time">起床时间</string>
    <string name="confirm">确定</string>
    <string name="select_current_time">选择当前时间</string>
    <string name="date">日期</string>
    <string name="time">时间</string>
    <string name="sleep">睡眠</string>
    <string name="kg">公斤</string>
    <string name="weight">体重</string>
    <string name="mmhg">mmHg</string>
    <string name="blood_pressure">血压</string>
    <string name="blood_sugar">血糖</string>
    <string name="mmol_per_L">mmol/L</string>
    <string name="blood_oxygen">血氧</string>
    <string name="percent">%</string>
    <string name="bmi">BMI指数</string>
    <string name="key_health_step_value">health_step_value</string>
    <string name="key_health_step_value_update_time">health_step_value_update_time</string>
    <string name="key_health_every_day_step_value">health_every_day_step_value</string>
    <string name="set_every_day_step_value">设置每日目标</string>
    <string name="status_health_sleep_normal">充足</string>
    <string name="status_health_sleep_less">不足</string>
    <string name="status_health_sleep_over">过长</string>
    <string name="height_m">身高（米）</string>
    <string name="weight_kg">体重（千克）</string>
    <string name="update_height_and_weight">更新身高和体重</string>
    <string name="back">返回</string>
    <string name="update_success">更新成功</string>
    <string name="insert_success">新增成功</string>
    <string name="point">.</string>
    <string name="no_data_english">--</string>
    <string name="no_data_chinese">无数据</string>
    <string name="blood_pressure_high_mmHg">高压（mmHg）</string>
    <string name="blood_pressure_low_mmHg">低压（mmHg）</string>
    <string name="blood_pressure_high">高压</string>
    <string name="blood_pressure_low">低压</string>
    <string name="status_health_blood_pressure_high_over">高血压</string>
    <string name="status_health_blood_pressure_low_less">低血压</string>
    <string name="insert_blood_pressure">记录血压</string>
    <string name="insert_blood_sugar">记录血糖</string>
    <string name="insert_blood_oxygen">记录血氧</string>
    <string name="insert_yesterday_sleep">记录昨晚睡眠情况</string>
    <string name="status_health_blood_sugar_over">高血糖</string>
    <string name="status_health_blood_sugar_less">低血糖</string>
    <string name="status_health_blood_oxygen_less">血氧不足</string>
    <string name="logout">退出登录</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="logout_title">退出登录？</string>
    <string name="logouting">正在退出登录…</string>
    <string name="key_user_role_relation_json">user_role_relation_json</string>
    <string name="no_rating_data_text">暂无评分</string>
    <string name="select_professional">选择一名专业人员</string>
    <string name="medical_suggestion_request">医疗意见和建议请求</string>
    <string name="recall">撤回</string>
    <string name="recall_success">撤回成功</string>
    <string name="my_send">我发出的</string>
    <string name="my_receive">我收到的</string>
    <string name="new_medical_suggestion">提供医疗意见和建议</string>
    <string name="medical_suggestion_content">建议内容</string>
    <string name="finish">完成</string>
    <string name="input_password_again">再输入一次密码</string>
    <string name="select_date">选择日期</string>
    <string name="sport_report">运动报告</string>
    <string name="the_max_history_step_value">历史最高步数</string>
    <string name="total_history_step_values">历史总步数</string>
    <string name="step_value_of_reach_standard">运动达标天数</string>
    <string name="per_day">平均每天</string>
    <string name="latest_sport_of_one_week">最近一周运动记录</string>
    <string name="you_defeated">您击败了</string>
    <string name="of_users">%的用户</string>
    <string name="share">分享</string>
    <string name="share_failed">分享失败</string>
    <string name="sleep_statistic">睡眠统计</string>
    <string name="day">天</string>
    <string name="update_user_info">更新用户信息</string>
    <string name="self_introduction">个人介绍</string>
    <string name="email">邮箱</string>
    <string name="phone">手机</string>
    <string name="done">完成</string>
    <string name="updatin">更新中...</string>
</resources>
