<?xml version="1.0" encoding="utf-8"?>
<com.scwang.smartrefresh.layout.SmartRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/smart_refresh_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:srlEnableRefresh="false">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:theme="@style/actionbar"
                app:menu="@menu/share"
                app:title="@string/sport_report" />

            <LinearLayout
                android:id="@+id/linear_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/activity_horizontal_margin"
                    android:text="@string/the_max_history_step_value"
                    android:textColor="@android:color/white"
                    android:textSize="15sp" />

                <com.robinhood.ticker.TickerView
                    android:id="@+id/text_view_max_step_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/activity_horizontal_margin"
                    android:layout_marginBottom="@dimen/activity_horizontal_margin"
                    android:text="@string/zero"
                    android:textColor="@android:color/white"
                    android:textSize="50sp"
                    app:ticker_defaultCharacterList="number" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/you_defeated"
                        android:textColor="@android:color/white" />

                    <TextView
                        android:id="@+id/text_view_percentage_of_users_defeated"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/zero"
                        android:textColor="@android:color/white" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/of_users"
                        android:textColor="@android:color/white" />

                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/activity_horizontal_margin"
                    android:text="@string/latest_sport_of_one_week"
                    android:textColor="@android:color/white"
                    android:textSize="15sp" />

                <com.github.mikephil.charting.charts.LineChart
                    android:id="@+id/line_chart_latest_seven_days"
                    android:layout_width="match_parent"
                    android:layout_height="200dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/activity_horizontal_margin"
                    android:text="@string/total_history_step_values"
                    android:textColor="@android:color/white"
                    android:textSize="15sp" />

                <com.robinhood.ticker.TickerView
                    android:id="@+id/text_view_total_step_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/activity_horizontal_margin"
                    android:layout_marginBottom="@dimen/activity_horizontal_margin"
                    android:text="@string/zero"
                    android:textColor="@android:color/white"
                    android:textSize="50sp"
                    app:ticker_defaultCharacterList="number" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/per_day"
                        android:textColor="@android:color/white" />

                    <TextView
                        android:id="@+id/text_view_step_value_per_day"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/zero"
                        android:textColor="@android:color/white" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/step"
                        android:textColor="@android:color/white" />

                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/activity_horizontal_margin"
                    android:text="@string/step_value_of_reach_standard"
                    android:textColor="@android:color/white"
                    android:textSize="15sp" />

                <com.robinhood.ticker.TickerView
                    android:id="@+id/text_view_number_of_reach_standard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/activity_horizontal_margin"
                    android:layout_marginBottom="@dimen/activity_horizontal_margin"
                    android:text="@string/zero"
                    android:textColor="@android:color/white"
                    android:textSize="50sp"
                    app:ticker_defaultCharacterList="number" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</com.scwang.smartrefresh.layout.SmartRefreshLayout>